--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clone Yu-Gi-Oh! - Semana do zero ao programador contratado</title>
 
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="src/css/fontes.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/estilos.css">
